# bolchai

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
sidecar/: config.py  main.py  requirements.txt
sidecar/api/: routes.py
sidecar/engine/: interpreter.py  llm.py  respond.py  system_message.py  utils.py
sidecar/execution/: base.py  python_kernel.py  subprocess_lang.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  sidecar.rs
src/components/: CodeBlock.tsx  ConfirmationPrompt.tsx  InputBar.tsx  MessageBubble.tsx  OutputPanel.tsx
src/hooks/: useChat.ts  useSettings.ts
src/lib/: types.ts
src/pages/: ChatPage.tsx  SettingsPage.tsx
src/store/: chatStore.ts
website/: index.html  style.css
